// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transpile fetch-request > produces ASL Task for fetch GET 1`] = `
{
  "QueryLanguage": "JSONata",
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "Arguments": {
        "ApiEndpoint": "{% $states.input.endpoint %}",
        "Method": "GET",
      },
      "End": true,
      "Output": "{% $merge([$states.input, {"invoke_1Result": $states.result}]) %}",
      "Resource": "arn:aws:states:::http:invoke",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;

exports[`transpile fetch-request > produces ASL Task for fetch POST with body 1`] = `
{
  "QueryLanguage": "JSONata",
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "Arguments": {
        "ApiEndpoint": "{% $states.input.apiUrl %}",
        "Headers": {
          "Content-Type": "application/json",
        },
        "Method": "POST",
        "RequestBody": "{% $states.input.payload %}",
      },
      "End": true,
      "Output": "{% $merge([$states.input, {"invoke_1Result": $states.result}]) %}",
      "Resource": "arn:aws:states:::http:invoke",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;

exports[`transpile fetch-request > uses JSONata Output for terminal fetch json 1`] = `
{
  "QueryLanguage": "JSONata",
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "Arguments": {
        "ApiEndpoint": "{% $states.input.endpoint %}",
        "Method": "GET",
      },
      "End": true,
      "Output": "{% $states.result.ResponseBody %}",
      "Resource": "arn:aws:states:::http:invoke",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;
